--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 body{
     background-color:black;
-    color: aqua;
+    color: #38BDF8;
 
+}
+.oop{
+    text-align: center;
+    text-decoration:underline;
+    
 }
